--- a/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -44,7 +44,10 @@
 <div class="p-2">
   <h2>My account at a glance</h2>
   <div class="d-flex flex-row justify-content-between card me-5 ms-5 mb-3 p-3">
-    <app-light-info *ngFor="let info of accountInfoList" [infoInput]="info"></app-light-info>
+    <app-light-info *ngFor="let info of accountInfoList"
+                    [infoInput]="info">
+
+    </app-light-info>
   </div>
   <div class="card m-3 p-3">
     <div class="d-flex flex-row align-content-center align-items-start mb-3">
@@ -66,6 +69,7 @@
                 [data]="chartData"
                 [options]="chartOptions"
                 [type]="chartType">
+<!--                [title]="'My awesome chart'"-->
         </canvas>
 
 
