--- a/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -69,7 +69,7 @@
                 [data]="chartData"
                 [options]="chartOptions"
                 [type]="chartType">
-<!--                [title]="'My awesome chart'"-->
+                [title]="'My awesome chart'"
         </canvas>
 
 
